# CS-57200-Heuristic_Problem_Solving

./: CMakeLists.txt  README.md  generate_chart.py  requirements.txt  run_final_integration.py  run_project.py  run_tournament.py
src/engine/: othello_engine.cpp
src/neural/: model.py  wthor_parser.py
src/python_bindings/: bindings.cpp
tests/: engine_tests.cpp
